adding store UI scaffolding for controller and services

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,7 @@
-<div>
-    <h1>this is home.html man</h1>
+<div style="height:1000px;background-color:#8a6d3b">
+    <div style="background-color:green;display:flex;justify-content:space-around">
+        <img src="images/big_blue_jay.gif"/>
+        <h1 style="padding-left:10px;color:whitesmoke">Blue Jay Herbs</h1>
+        <button class="btn btn-primary" style="" ui-sref="store">Medicine Store</button>
+    </div>
 </div>
