--- a/public/views/store.html
+++ b/public/views/store.html
@@ -1,5 +1,5 @@
 <div class="container">
-<nav class="navbar navbar-inverse">
+<nav class="d-flex align-items-center" style="padding:10px;background-color:sandybrown;border-radius:3px">
 
     <span>
         View Products By:
@@ -51,7 +51,11 @@
     </div>
 
     <div style="margin-left:5px;">
-       <input type="text" class="form-control" placeholder="search product by name" style="width:300px;">
+        <input type="text" ng-model="searchProductName" placeholder="Find Products By Name" uib-typeahead="product for product in searchProductsByName($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+        <i ng-show="searchingProducts" class="glyphicon glyphicon-refresh"></i>
+        <div ng-show="noResults">
+            <i class="glyphicon glyphicon-remove"></i> No Products Found
+        </div>
     </div>
 
 </div>
