--- a/public/views/store.html
+++ b/public/views/store.html
@@ -51,7 +51,12 @@
     </div>
 
     <div style="margin-left:5px;">
-        <input type="text" ng-model="searchProductName" placeholder="Find Products By Name" uib-typeahead="product for product in searchProductsByName($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+        <input type="text" ng-model="searchProductName" placeholder="Find Products By Name"
+               uib-typeahead="product for product in searchProductsByName($viewValue)"
+               typeahead-loading="searchingProducts"
+               typeahead-no-results="noResults"
+               typeahead-append-to-body="true"
+               class="form-control">
         <i ng-show="searchingProducts" class="glyphicon glyphicon-refresh"></i>
         <div ng-show="noResults">
             <i class="glyphicon glyphicon-remove"></i> No Products Found
