--- a/public/views/store.html
+++ b/public/views/store.html
@@ -1,5 +1,5 @@
 <div class="container">
-<nav class="d-flex align-items-center" style="padding:10px;background-color:sandybrown;border-radius:3px">
+<nav style="display:flex;align-items:center;padding:10px;background-color:sandybrown;border-radius:3px">
 
     <span>
         View Products By:
@@ -51,11 +51,12 @@
     </div>
 
     <div style="margin-left:5px;">
-        <input type="text" ng-model="searchProductName" placeholder="Find Products By Name"
-               uib-typeahead="product for product in searchProductsByName($viewValue)"
+        <input type="text" ng-model="chosenProduct" placeholder="Find Products By Name"
+               uib-typeahead="product as product.name for product in searchProductsByName($viewValue)"
                typeahead-loading="searchingProducts"
                typeahead-no-results="noResults"
                typeahead-append-to-body="true"
+               typeahead-on-select="showChosenProduct(chosenProduct)"
                class="form-control">
         <i ng-show="searchingProducts" class="glyphicon glyphicon-refresh"></i>
         <div ng-show="noResults">
