--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -9,4 +9,23 @@ div.bluejay-modal .modal-content {
 
 .add-to-cart-modal .bj-btn-container{
     margin-bottom:10px;
+    flex-wrap:wrap;
+    justify-content:space-around;
+}
+
+
+.store-products-container{
+   display:flex;
+    flex-wrap:wrap;
+    justify-content: space-around;
+}
+
+.store-browse-product{
+    display:flex;
+    border: 2px slategrey solid;
+    border-radius:3px;
+    height:150px;
+    width:150px;
+    padding:10px;
+    margin-top:10px;
 }
