--- a/public/views/store.html
+++ b/public/views/store.html
@@ -50,6 +50,8 @@
 
     </div>
 
+
+    <!--Begin product search input -->
     <div style="margin-left:5px;">
         <input type="text" ng-model="chosenProduct" placeholder="Find Products By Name"
                uib-typeahead="product as product.name for product in searchProductsByName($viewValue)"
@@ -63,7 +65,19 @@
             <i class="glyphicon glyphicon-remove"></i> No Products Found
         </div>
     </div>
+    <!-- End product search input -->
+
+</nav>
+
+    <div id="store-products-container" class="store-products-container">
+
+        <div class="store-browse-product" ng-repeat="product in productsToBrowse"
+             ng-click="showChosenProduct(product)">
+
+                here is a product
+        </div>
+
+    </div>
 
 </div>
 
-</nav>
