all product browse APIs are now hooked up to UI browsing functionality

--- a/public/views/store.html
+++ b/public/views/store.html
@@ -73,8 +73,8 @@
 
         <div class="store-browse-product" ng-repeat="product in productsToBrowse"
              ng-click="showChosenProduct(product)">
+            <h3>{{product.name}}</h3>
 
-                here is a product
         </div>
 
     </div>
