--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -17,15 +17,16 @@ div.bluejay-modal .modal-content {
 .store-products-container{
    display:flex;
     flex-wrap:wrap;
-    justify-content: space-around;
 }
 
 .store-browse-product{
-    display:flex;
     border: 2px slategrey solid;
     border-radius:3px;
     height:150px;
     width:150px;
     padding:10px;
     margin-top:10px;
+    margin-bottom:10px;
+    margin-left:10px;
+    cursor:pointer;
 }
