--- a/public/views/store.html
+++ b/public/views/store.html
@@ -73,7 +73,7 @@
 
         <div class="store-browse-product" ng-repeat="product in productsToBrowse"
              ng-click="showChosenProduct(product)">
-            <h4>{{product.name}}</h4>
+            <p>{{product.name}}</p>
 
         </div>
 
