initial shopping cart UI implementation

--- a/public/views/store.html
+++ b/public/views/store.html
@@ -67,6 +67,12 @@
     </div>
     <!-- End product search input -->
 
+    <!-- Begin Expandable Shopping Cart -->
+
+    <shopping-cart cart-data="shoppingCartData">
+    </shopping-cart>
+    <!-- End Expandable Shopping Cart -->
+
 </nav>
 
     <div id="store-products-container" class="store-products-container">
