shopping cart dropdown is now being toggled to collapsed and expanded states

--- a/public/views/store.html
+++ b/public/views/store.html
@@ -68,9 +68,11 @@
     <!-- End product search input -->
 
     <!-- Begin Expandable Shopping Cart -->
+    <div class="flex-left">
+        <shopping-cart cart-data="shoppingCartData">
+        </shopping-cart>
+    </div>
 
-    <shopping-cart cart-data="shoppingCartData">
-    </shopping-cart>
     <!-- End Expandable Shopping Cart -->
 
 </nav>
