--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3,6 +3,12 @@ div.bluejay-modal .modal-content {
     overflow: auto;
 }
 
+.flex-left{
+ display:flex;
+ justify-content:flex-end;
+    flex-basis:1000px;
+}
+
 .add-to-cart-modal{
     margin:10px;
 }
@@ -29,4 +35,26 @@ div.bluejay-modal .modal-content {
     margin-bottom:10px;
     margin-left:10px;
     cursor:pointer;
+}
+
+.shopping-cart-dropdown{
+    background-color:#ffffff;
+    border: 2px slategrey solid;
+    border-radius:3px;
+    padding:5px;
+    position:absolute;
+    top:20px;
+    left:0px;
+    z-index:1;
+}
+
+.cartExpanded{
+    max-height:300px;
+    overflow-y:auto;
+}
+
+.cartCollapsed{
+    height:0px;
+    display:none;
+    overflow:hidden;
 }
