store nav styles

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -67,6 +67,11 @@ div.bluejay-modal .modal-content {
     z-index:1;
 }
 
+.store-nav-item{
+    display:flex;
+    margin-bottom:5px;
+}
+
 
 .cartExpanded{
     max-height:300px;
