cart item remove button and initial remove functionality

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -13,6 +13,13 @@ div.bluejay-modal .modal-content {
     justify-content:space-around;
 }
 
+i.remove-item{
+ margin-left:5px;
+}
+
+i.remove-item:hover{
+    color:orangered;
+}
 
 .store-products-container{
    display:flex;
