remove item functionality

--- a/public/views/store.html
+++ b/public/views/store.html
@@ -81,7 +81,7 @@
 
     <!-- Begin Expandable Shopping Cart -->
     <div class="store-nav-item">
-        <shopping-cart cart-data="shoppingCartData">
+        <shopping-cart>
         </shopping-cart>
     </div>
 
