--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -68,6 +68,7 @@ i.remove-item:hover{
 
 
 .shopping-cart-dropdown{
+    min-width:300px;
     background-color:#ffffff;
     border: 2px slategrey solid;
     border-radius:3px;
@@ -76,6 +77,11 @@ i.remove-item:hover{
     top:20px;
     left:0px;
     z-index:1;
+}
+
+.shopping-cart-item{
+    border-bottom: 1px slategrey solid;
+    margin-bottom: 5px;
 }
 
 .store-nav-item{
