--- a/public/views/store.html
+++ b/public/views/store.html
@@ -1,6 +1,5 @@
 <div class="container">
-<nav style="display:flex;flex-wrap:wrap;align-items:flex-end;align-content:space-around;justify-content:space-between;padding:10px;background-color:sandybrown;border-radius:3px">
-
+<nav class="store-nav">
     <!-- Begin All products button -->
     <div class="store-nav-item" style="margin-right:5px;margin-left:5px">
         <div>
