--- a/public/administrator/views/edit-products.html
+++ b/public/administrator/views/edit-products.html
@@ -1,6 +1,6 @@
 <h3>Delete A Product</h3>
 
 <ul>
-    <li ng-repeat="product in currentProducts">{{product.name}}<span ng-click="deleteProduct(product.id)">X</span></li>
+    <li ng-repeat="product in allProducts">{{product.name}}<span ng-click="deleteProduct(product.id)">X</span></li>
 
 </ul>
