--- a/public/administrator/views/main.html
+++ b/public/administrator/views/main.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Bluejay herbs admin main</h1>
+    admin main
 
     <ul>
         <li><a href="#" ui-sref="edit_products">Edit Products</a></li>
